@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.08 version.
 
 0.05 2014-03-06
  - Add 'readme_from' directive to Makefile.PL.
